--- a/deployment/sandbox-v2/helm/charts/kernel/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/kernel/values.template.j2
@@ -13,6 +13,7 @@ probe:
   period: 30 # Seconds
 imagePullPolicy: Always
 isGlowroot: {{ is_glowroot }} 
+domainName: {{ sandbox_domain_name }}
 services:
   auth:
     serviceName: kernel-auth-service 
