--- a/deployment/sandbox-v2/helm/charts/prereg/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/prereg/values.template.j2
@@ -4,7 +4,7 @@ part-of: mosip
 activeProfileEnv: mz
 springConfigLabel: master
 configServerUrl: http://config-server/config
-sandboxDomainName: {{ sandbox_domain_name }}
+domainName: {{ sandbox_domain_name }}
 probe:
   initialDelay: 180  # Seconds
   period: 30 # Seconds
