--- a/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
@@ -17,6 +17,9 @@ artifactoryUrl: http://13.71.87.138:8040
 
 imagePullPolicy: Always 
 
+domainName: {{ sandbox_domain_name }}
+isGlowroot: {{ is_glowroot }} 
+
 services:
   camel:
     serviceName: regproc-camel-stage
