--- a/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/regproc/values.template.j2
@@ -18,6 +18,7 @@ artifactoryUrl: http://13.71.87.138:8040
 imagePullPolicy: Always 
 
 domainName: {{ sandbox_domain_name }}
+internalDomain: {{ clusters.mz.nodePortNode }} 
 isGlowroot: {{ is_glowroot }} 
 
 services:
