--- a/deployment/sandbox-v2/helm/charts/grafana/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/grafana/values.template.j2
@@ -5,11 +5,10 @@ sidecar:
 
 grafana.ini:
   server:
-    domain: {{sandbox_domain_name}} 
-    root_url: "%(protocol)s://%(domain)s/grafana"
+    root_url: "https://{{sandbox_domain_name}}/{{mon_prop.grafana_ingress_path}}"
     serve_from_sub_path: true
 ingress:
   enabled: true
   hosts: 
     - {{sandbox_domain_name}} 
-  path: "/grafana"
+  path: "/{{mon_prop.grafana_ingress_path}}"
