[MOSIP-1806] Minimum resources specified for postgres pod.

--- a/deployment/sandbox-v2/helm/charts/postgres/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/postgres/values.template.j2
@@ -13,6 +13,11 @@ pv:
   size: {{ postgres.size }}
 sc: 
   name: ""
+
+resources:
+  requests:
+    memory: 512Mi 
+    cpu: 250m 
 docker:
   image: postgres
   tag: 12.2
