[MOSIP-1124] Ingress file enchanced to add internal host.

--- a/deployment/sandbox-v2/helm/charts/pms/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/pms/values.template.j2
@@ -12,6 +12,7 @@ probe:
   period: 30 # Seconds
 imagePullPolicy: Always
 domainName: {{ sandbox_domain_name }}
+internalDomain: {{ clusters.mz.nodePortNode }} 
 isGlowroot: {{ is_glowroot }} 
 services:
   misp: 
