--- a/deployment/sandbox-v2/helm/charts/resident/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/resident/values.template.j2
@@ -9,6 +9,7 @@ ingress:
 artifactoryUrl: http://13.71.87.138:8040
 imagePullPolicy: Always
 domainName: {{ sandbox_domain_name }}
+internalDomain: {{ clusters.mz.nodePortNode }} 
 isGlowroot: {{ is_glowroot }} 
 probe:
   initialDelay: 30  # Seconds
