[MOSIP-7000] Postgres access enabled via nginx instead of kube proxy port forward.

--- a/deployment/sandbox-v2/helm/charts/postgres/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/postgres/values.template.j2
@@ -22,5 +22,5 @@ docker:
   image: postgres
   tag: 12.2
   containerPort: 5432
-nodePort: {{ postgres.local_port }}
+nodePort: {{ postgres.nodeport }}
 maxConnections: {{ postgres.max_connections }} 
