--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -254,3 +254,11 @@ http {
 
 }
 
+stream {
+    server {
+        listen {{postgres.nodeport}};  # For postgres. Connecting to nodeport
+        proxy_pass {{postgres.server}}:{{postgres.nodeport}};
+    }
+}
+
+
