--- a/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
@@ -36,7 +36,7 @@ services:
   receiver:
     serviceName: regproc-packet-receiver-stage
     dockerImage: mosipdev/registration-processor-packet-receiver-stage
-    dockerTag: 1.0.10_PATCH
+    dockerTag: 1.0.10_patch
     ports:
       eventbusPort: 5711
       hazelcastPort: 5701
@@ -47,7 +47,7 @@ services:
   camel:
     serviceName: regproc-camel-stage
     dockerImage: mosipdev/registration-processor-common-camel-bridge
-    dockerTag: 1.0.10_PATCH
+    dockerTag: 1.0.10_patch
     ports:
       eventbusPort: 5723
       hazelcastPort: 5701
@@ -58,7 +58,7 @@ services:
   status:
     serviceName: regproc-registration-status-service
     dockerImage: mosipdev/registration-processor-registration-status-service
-    dockerTag: 1.0.10_PATCH
+    dockerTag: 1.0.10_patch
     ports:
       containerPort: 8083
       servicePort: 80
