--- a/deployment/sandbox-v2/helm/charts/ida/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/ida/values.template.j2
@@ -61,9 +61,9 @@ generators:
   hashsalt:  
     name:  ida-hash-salt-generator 
     dockerImage: mosipdev/kernel-salt-generator
-    dockerTag: 1.0.9_patch
+    dockerTag: 1.0.9_PATCH
   encryptsalt:  
     name:  ida-encrypt-salt-generator 
     dockerImage: mosipdev/kernel-salt-generator
-    dockerTag: 1.0.9_patch
+    dockerTag: 1.0.9_PATCH
    
