--- a/deployment/sandbox-v2/helm/charts/softhsm/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/softhsm/values.template.j2
@@ -4,7 +4,7 @@ serviceName: softhsm-{{hsm_prop.label}}
 activeProfileEnv: mz 
 springConfigLabel: master
 configServerUrl: http://config-server/config
-artifactoryUrl: http://104.211.246.17:8040
+artifactoryUrl: {{ artifactory_url }} 
 
 docker:
   image: mosipdev/softhsm
