--- a/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/dmzregproc/values.template.j2
@@ -13,7 +13,7 @@ probe:
 ingress:
    namespace: default
 
-artifactoryUrl: http://104.211.246.17:8040 
+artifactoryUrl: {{ artifactory_url }} 
 
 domainName: {{ sandbox_domain_name }}
 internalDomain: {{ clusters.dmz.nodePortNode }} 
