--- a/deployment/sandbox-v2/roles/k8scluster/dashboard/templates/dashboard.yml.j2
+++ b/deployment/sandbox-v2/roles/k8scluster/dashboard/templates/dashboard.yml.j2
@@ -159,9 +159,8 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-#  name: kubernetes-dashboard
-  name: cluster-admin  #CAUTION: This will alow no password login. Not to be done in production.
-  
+  name: kubernetes-dashboard
+  #name: cluster-admin  #CAUTION: This will alow no password login. Not to be done in production.
 subjects:
   - kind: ServiceAccount
     name: kubernetes-dashboard
@@ -189,7 +188,7 @@ spec:
     spec:
       containers:
         - name: kubernetes-dashboard
-          image: kubernetesui/dashboard:v2.0.0-rc3
+          image: kubernetesui/dashboard:v2.0.0
           imagePullPolicy: Always
           ports:
             - containerPort: 8443
@@ -197,7 +196,8 @@ spec:
           args:
             - --auto-generate-certificates
             - --namespace=kubernetes-dashboard
-            - --enable-skip-login #CAUTION: This will alow no password login. Not to be done in production.
+            - --token-ttl={{dashboard_conf.token_expiry}}
+            #- --enable-skip-login #CAUTION: This will alow no password login. Not to be done in production.
             # Uncomment the following line to manually specify Kubernetes API server Host
             # If not specified, Dashboard will attempt to auto discover the API server and connect
             # to it. Uncomment only if the default does not work.
@@ -228,7 +228,7 @@ spec:
           emptyDir: {}
       serviceAccountName: kubernetes-dashboard
       nodeSelector:
-        "beta.kubernetes.io/os": linux
+        "kubernetes.io/os": linux
       # Comment the following tolerations if Dashboard must not be deployed on master
       tolerations:
         - key: node-role.kubernetes.io/master
@@ -274,7 +274,7 @@ spec:
     spec:
       containers:
         - name: dashboard-metrics-scraper
-          image: kubernetesui/metrics-scraper:v1.0.3
+          image: kubernetesui/metrics-scraper:v1.0.4
           ports:
             - containerPort: 8000
               protocol: TCP
@@ -295,7 +295,7 @@ spec:
             runAsGroup: 2001
       serviceAccountName: kubernetes-dashboard
       nodeSelector:
-        "beta.kubernetes.io/os": linux
+        "kubernetes.io/os": linux
       # Comment the following tolerations if Dashboard must not be deployed on master
       tolerations:
         - key: node-role.kubernetes.io/master
@@ -314,16 +314,35 @@ metadata:
     ingress.kubernetes.io/class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
-#    nginx.ingress.kubernetes.io/secure-backends: "true"
-#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
 spec:
   rules:
   
   - host: {{sandbox_domain_name}}
     http:
       paths:
-      - path: {{ dashboard_ingress_url }}(/|$)(.*)
+      - path: {{ dashboard_conf.url }}(/|$)(.*)
         backend:
           serviceName: kubernetes-dashboard
           servicePort: 443
+
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: admin-user
+  namespace: kubernetes-dashboard
+
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: admin-user
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: cluster-admin
+subjects:
+- kind: ServiceAccount
+  name: admin-user
+  namespace: kubernetes-dashboard
 
