--- a/deployment/sandbox-v2/helm/charts/config-server/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/config-server/values.template.j2
@@ -19,7 +19,7 @@ pvc:
   size: 10Mi # Should not exceed pv size
 ingressPath: /config
 domain: {{ sandbox_domain_name }}
-internalDomain: {{ clusters.mz.nodePortNode }} 
+internalDomain: {{ clusters.mz.nodeport_node }} 
 sc:
   name: ""
 
